--- a/edubot_ros/edubot_navigation/param/base_local_planner_params.yaml
+++ b/edubot_ros/edubot_navigation/param/base_local_planner_params.yaml
@@ -2,12 +2,18 @@ TrajectoryPlannerROS:
   #Set the acceleration limits of the robot
   acc_lim_th: 3.2 
   acc_lim_x: 2.5
-  acc_lim_y: 2.5
+  #acc_lim_y: 2.5
+  acc_lim_y: 0
 
   #Set the velocity limits of the robot
-  max_vel_x: 0.65
+  #max_vel_x: 0.65
+  max_vel_x: 0.26
   #min_vel_x: 0.1
   min_vel_x: -0.1
+
+  max_vel_y: 0.0
+  min_vel_y: 0.0
+
   max_rotational_vel: 1.0
   min_in_place_rotational_vel: 0.4
 
@@ -15,10 +21,11 @@ TrajectoryPlannerROS:
   escape_vel: -0.1
   
   #For this example, we'll use a holonomic robot
-  holonomic_robot: true
+  #holonomic_robot: true
+  holonomic_robot: false
 
   #Since we're using a holonomic robot, we'll set the set of y velocities it will sample
-  y_vels: [-0.3, -0.1, 0.1, -0.3]
+  #y_vels: [-0.3, -0.1, 0.1, -0.3]
 
   #Set the tolerance on achieving a goal
   xy_goal_tolerance: 0.1
